@@ -273,6 +273,45 @@
 						<tr>
 							<td><input type="checkbox" id="gamebillet"><label for="gamebillet">GameBillet</label></td>
 						</tr>
+						<tr>
+						<li id="view_price_li">
+						<label id="viewprice_text">View in</label>
+						<select id="override_price">
+							<option value="auto">Auto-detect</option>
+							<option value="USD">USD</option>
+							<option value="GBP">GBP</option>
+							<option value="EUR">EUR</option>
+							<option value="RUB">RUB</option>
+							<option value="BRL">BRL</option>
+							<option value="JPY">JPY</option>
+							<option value="NOK">NOK</option>
+							<option value="IDR">IDR</option>
+							<option value="MYR">MYR</option>
+							<option value="PHP">PHP</option>
+							<option value="SGD">SGD</option>
+							<option value="THB">THB</option>
+							<option value="VND">VND</option>
+							<option value="KRW">KRW</option>
+							<option value="TRY">TRY</option>
+							<option value="UAH">UAH</option>
+							<option value="MXN">MXN</option>
+							<option value="CAD">CAD</option>
+							<option value="AUD">AUD</option>
+							<option value="NZD">NZD</option>
+							<option value="INR">INR</option>
+							<option value="HKD">HKD</option>
+							<option value="TWD">TWD</option>
+							<option value="CNY">CNY</option>
+							<option value="SAR">SAR</option>
+							<option value="ZAR">ZAR</option>
+							<option value="AED">AED</option>
+							<option value="CHF">CHF</option>
+							<option value="CLP">CLP</option>
+							<option value="PEN">PEN</option>
+							<option value="COP">COP</option>
+						</select>
+						</li>
+						</tr>
 					</table>
 					<li class="header" id="store_regionalprice_header">Regional Price Comparison</li>
 					<li id="regional_price_li">
