@@ -1,5 +1,7 @@
 v8.3
 -----
++ Added an option in the price menu to override prices displayed by Enhanced Steam
+: Quick and Instant sale currency will now always match the user's wallet currency type
 
 
 v8.2.2
